cleanups
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/functor/trunk@1541658 13f79535-47bb-0310-9956-ffa450edef68