@@ -47,6 +47,6 @@ public class TestIndexOfInGenerator extends BaseFunctorTest {
     // ------------------------------------------------------------------------
 
     private List<Integer> list = Arrays.asList(0,1,2,3,4,5,6,7,8,9);
-    private Predicate<Integer> equalsThree = LeftBoundPredicate.bind(IsEqual.instance(),new Integer(3));
+    private Predicate<Integer> equalsThree = LeftBoundPredicate.bind(IsEqual.instance(),Integer.valueOf(3));
 
 }
