@@ -41,12 +41,12 @@ public class TestIsEquivalent extends BaseComparisonPredicateTest {
 
     @Test
     public void testTest() throws Exception {
-        IsEquivalent<Integer> p = IsEquivalent.<Integer>instance();
-        assertTrue(!p.test(new Integer(2),new Integer(4)));
-        assertTrue(!p.test(new Integer(3),new Integer(4)));
-        assertTrue(p.test(new Integer(4),new Integer(4)));
-        assertTrue(!p.test(new Integer(5),new Integer(4)));
-        assertTrue(!p.test(new Integer(6),new Integer(4)));
+        IsEquivalent<Integer> p = IsEquivalent.<Integer> instance();
+        assertTrue(!p.test(Integer.valueOf(2), Integer.valueOf(4)));
+        assertTrue(!p.test(Integer.valueOf(3), Integer.valueOf(4)));
+        assertTrue(p.test(Integer.valueOf(4), Integer.valueOf(4)));
+        assertTrue(!p.test(Integer.valueOf(5), Integer.valueOf(4)));
+        assertTrue(!p.test(Integer.valueOf(6), Integer.valueOf(4)));
     }
 
     @Test
@@ -58,11 +58,11 @@ public class TestIsEquivalent extends BaseComparisonPredicateTest {
     @Test
     public void testEquals() throws Exception {
         IsEquivalent<Comparable<Integer>> p = IsEquivalent.instance();
-        assertEquals(p,p);
+        assertEquals(p, p);
 
-        assertObjectsAreEqual(p,new IsEquivalent<Comparable<?>>());
-        assertObjectsAreEqual(p,new IsEquivalent<Integer>(ComparableComparator.<Integer>instance()));
-        assertObjectsAreNotEqual(p,Constant.FALSE);
+        assertObjectsAreEqual(p, new IsEquivalent<Comparable<?>>());
+        assertObjectsAreEqual(p, new IsEquivalent<Integer>(ComparableComparator.<Integer> instance()));
+        assertObjectsAreNotEqual(p, Constant.FALSE);
         assertFalse(p.equals(null));
     }
 
